tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors4.errors.txt
fatarrowfunctionsOptionalArgsErrors4.ts(1,14): error TS1015: Parameter cannot have question mark and initializer.
fatarrowfunctionsOptionalArgsErrors4.ts(2,15): error TS1015: Parameter cannot have question mark and initializer.
fatarrowfunctionsOptionalArgsErrors4.ts(3,21): error TS1015: Parameter cannot have question mark and initializer.
fatarrowfunctionsOptionalArgsErrors4.ts(4,7): error TS1015: Parameter cannot have question mark and initializer.
fatarrowfunctionsOptionalArgsErrors4.ts(4,39): error TS1015: Parameter cannot have question mark and initializer.
fatarrowfunctionsOptionalArgsErrors4.ts(6,5): error TS2304: Cannot find name 'foo'.
fatarrowfunctionsOptionalArgsErrors4.ts(17,10): error TS1015: Parameter cannot have question mark and initializer.
fatarrowfunctionsOptionalArgsErrors4.ts(19,13): error TS1015: Parameter cannot have question mark and initializer.


==== fatarrowfunctionsOptionalArgsErrors4.ts (8 errors) ====
        false ? (arg?: number = 0) => 47 : null;
                 ~~~
!!! error TS1015: Parameter cannot have question mark and initializer.
        false ? ((arg?: number = 0) => 57) : null;
                  ~~~
!!! error TS1015: Parameter cannot have question mark and initializer.
        false ? null : (arg?: number = 0) => 67;
                        ~~~
!!! error TS1015: Parameter cannot have question mark and initializer.
        ((arg?:number = 1) => 0) + '' + ((arg?:number = 2) => 106);
          ~~~
!!! error TS1015: Parameter cannot have question mark and initializer.
                                          ~~~
!!! error TS1015: Parameter cannot have question mark and initializer.
    
        foo(
        ~~~
!!! error TS2304: Cannot find name 'foo'.
            (a) => 110, 
            ((a) => 111), 
            (a) => {
                return 112;
            },
            (a? ) => 113, 
            (a, b? ) => 114, 
            (a: number) => 115, 
            (a: number = 0) => 116, 
            (a = 0) => 117, 
            (a?: number = 0) => 118, 
             ~
!!! error TS1015: Parameter cannot have question mark and initializer.
            (...a: number[]) => 119, 
            (a, b? = 0, ...c: number[]) => 120,
                ~
!!! error TS1015: Parameter cannot have question mark and initializer.
            (a) => (b) => (c) => 121,
            false? (a) => 0 : (b) => 122
        );